test/error/parse/ExpectTo.mod
MODULE ExpectTo;
TYPE P = POINTER ;
END ExpectTo.
